[maven-release-plugin] prepare release invoicee-server-tag-0.1

--- a/pom.xml
+++ b/pom.xml
@@ -3,15 +3,16 @@
   <parent>
     <groupId>mymaven.multimodule.invoiceproject</groupId>
     <artifactId>invoice-project</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
+  <version>invoice-server-release-0.1</version>
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-client1</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-client1.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-client1.git</connection>
-		<tag>invoicee-server-tag-0.2</tag>
+		<tag>invoicee-server-tag-0.1</tag>
 	</scm>
 	<build>
 		<pluginManagement>
