--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>mymaven.multimodule.invoiceproject</groupId>
     <artifactId>invoice-project</artifactId>
-    <version>0.1</version>
+    <version>0.1-SNAPSHOT</version>
   </parent>
   <artifactId>invoice-server</artifactId>
   <version>invoice-server-release-0.1</version>
