updated latest changes to git

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>0.1-SNAPSHOT</version>
   </parent>
   <artifactId>invoice-server</artifactId>
-  <version>invoice-server-release-0.1</version>
+  <version>0.1-SNAPSHOT</version>
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-client1</url>
