--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>mymaven.multimodule.invoiceproject</groupId>
     <artifactId>invoice-project</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
   <!-- Source code Repository configuration -->
@@ -11,7 +11,7 @@
 		<url>https://github.com/raghu-organization/invoice-client1</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-client1.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-client1.git</connection>
-		<tag>invoicee-server-tag-0.1</tag>
+		<tag>tag-0.1</tag>
 	</scm>
 	<build>
 		<pluginManagement>
