updated changed to git after git pull

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,19 @@
 #release configuration
-#Thu Jun 11 18:05:05 EEST 2015
+#Thu Jun 11 18:08:43 EEST 2015
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.connection=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=invoicee-server-tag-0.1
+scm.tag=tag-0.1
 pushChanges=true
 scm.url=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
+dependency.mymaven.multimodule.invoiceproject\:invoice-project.release=0.1
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.tag=invoicee-server-tag-0.1
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.url=https\://github.com/raghu-organization/invoice-client1
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.mymaven.multimodule.invoiceproject\:invoice-server=0.1-SNAPSHOT
+project.rel.mymaven.multimodule.invoiceproject\:invoice-server=0.1
+completedPhase=run-preparation-goals
+dependency.mymaven.multimodule.invoiceproject\:invoice-project.development=0.1
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.developerConnection=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
