updated all the files

--- a/release.properties
+++ b/release.properties
@@ -1,5 +1,6 @@
 #release configuration
-#Thu Jun 11 18:31:19 EEST 2015
+#Thu Jun 11 18:34:38 EEST 2015
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.connection=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 scm.tag=tag-0.3
 pushChanges=true
@@ -7,5 +8,12 @@ scm.url=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
+dependency.mymaven.multimodule.invoiceproject\:invoice-project.release=0.3
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.tag=tag-0.1
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.url=https\://github.com/raghu-organization/invoice-client1
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.dev.mymaven.multimodule.invoiceproject\:invoice-server=0.1-SNAPSHOT
+project.rel.mymaven.multimodule.invoiceproject\:invoice-server=0.3
+completedPhase=generate-release-poms
+dependency.mymaven.multimodule.invoiceproject\:invoice-project.development=0.3
+project.scm.mymaven.multimodule.invoiceproject\:invoice-server.developerConnection=scm\:git\:git@github.com\:raghu-organization/invoice-client1.git
