--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
-  <version>0.1</version>
+  <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <!-- Source code Repository configuration -->
 	<scm>
