--- a/pom.xml
+++ b/pom.xml
@@ -6,14 +6,13 @@
     <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
-  <version>0.4</version>
+  <version>0.4-SNAPSHOT</version>
   <packaging>jar</packaging>
   <!-- Source code Repository configuration -->
 	<scm>
-		<url>https://github.com/raghu-organization/invoice-client1</url>
-		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-client1.git</developerConnection>
-		<connection>scm:git:git@github.com:raghu-organization/invoice-client1.git</connection>
-	  <tag>tag-0.4</tag>
+		<url>https://github.com/raghu-organization/invoice-server</url>
+		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-server.git</developerConnection>
+		<connection>scm:git:git@github.com:raghu-organization/invoice-server.git</connection>
   </scm>
 	<build>
 		<pluginManagement>
@@ -38,7 +37,7 @@
 	<repositories>
 		<repository>
 			<id>invoice-client1</id>
-			<url>http://localhost:7092/nexus/content/repositories/invoice-client1</url>
+			<url>http://localhost:7092/nexus/content/repositories/invoice-server</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -48,7 +47,7 @@
 		</repository>
 		<repository>
 			<id>invoice-client1-snapshots</id>
-			<url>http://localhost:7092/nexus/content/repositories/invoice-client1-snapshots</url>
+			<url>http://localhost:7092/nexus/content/repositories/invoice-server-snapshots</url>
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
