--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,14 @@
     <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
-  <version>0.4-SNAPSHOT</version>
+  <version>0.5</version>
   <packaging>jar</packaging>
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-server</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-server.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-server.git</connection>
+    <tag>tag-0.5</tag>
   </scm>
 	<build>
 		<pluginManagement>
