--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,9 @@
     <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
-  <version>0.5</version>
   <packaging>jar</packaging>
+  <version>0.6-SNAPSHOT</version>
+  
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-server</url>
