udpated all files

--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,19 @@
 #release configuration
-#Thu Jun 11 19:38:28 EEST 2015
+#Thu Jun 11 19:40:08 EEST 2015
+project.scm.invoice-project\:invoice-server.developerConnection=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-scm.tag=tag-0.8
+dependency.invoice-project\:invoice-project.release=0.9
+scm.tag=tag-0.9
 pushChanges=true
 scm.url=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 preparationGoals=clean verify
+dependency.invoice-project\:invoice-project.development=0.10-SNAPSHOT
+project.scm.invoice-project\:invoice-server.connection=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
+project.dev.invoice-project\:invoice-server=0.10-SNAPSHOT
+project.scm.invoice-project\:invoice-server.tag=tag-0.6
+project.scm.invoice-project\:invoice-server.url=https\://github.com/raghu-organization/invoice-server
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+project.rel.invoice-project\:invoice-server=0.9
+completedPhase=generate-release-poms
