--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
   <parent>
     <groupId>invoice-project</groupId>
     <artifactId>invoice-project</artifactId>
-    <version>0.10-SNAPSHOT</version>
+    <version>0.1</version>
   </parent>
   <artifactId>invoice-server</artifactId>
   <packaging>jar</packaging>
-  <version>0.9-SNAPSHOT</version>
+  <version>0.10-SNAPSHOT</version>
   
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-server</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-server.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-server.git</connection>
-    <tag>tag-0.6</tag>
+    <tag>invoice-server-0.10</tag>
   </scm>
 	<build>
 		<pluginManagement>
