--- a/release.properties
+++ b/release.properties
@@ -1,19 +1,17 @@
 #release configuration
-#Thu Jun 11 22:21:20 EEST 2015
+#Thu Jun 11 22:25:33 EEST 2015
 project.scm.invoice-project\:invoice-server.developerConnection=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
-dependency.invoice-project\:invoice-project.release=0.10
-scm.tag=invoice-server-0.10
+scm.tag=invoice-server-tag-0.10
 pushChanges=true
 scm.url=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 preparationGoals=clean verify
-dependency.invoice-project\:invoice-project.development=0.10
 project.scm.invoice-project\:invoice-server.connection=scm\:git\:git@github.com\:raghu-organization/invoice-server.git
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
 project.dev.invoice-project\:invoice-server=0.11-SNAPSHOT
-project.scm.invoice-project\:invoice-server.tag=tag-0.6
+project.scm.invoice-project\:invoice-server.tag=invoice-server-0.10
 project.scm.invoice-project\:invoice-server.url=https\://github.com/raghu-organization/invoice-server
 exec.snapshotReleasePluginAllowed=false
 project.rel.invoice-project\:invoice-server=0.10
-completedPhase=generate-release-poms
+completedPhase=end-release
