--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,14 @@
   </parent>
   <artifactId>invoice-server</artifactId>
   <packaging>jar</packaging>
-  <version>0.16-SNAPSHOT</version>
+  <version>0.16</version>
   
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-server</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-server.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-server.git</connection>
+    <tag>invoice-server-tag-0.16</tag>
   </scm>
 	<build>
 		<pluginManagement>
