--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,14 @@
   </parent>
   <artifactId>invoice-server</artifactId>
   <packaging>jar</packaging>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.20</version>
   
   <!-- Source code Repository configuration -->
 	<scm>
 		<url>https://github.com/raghu-organization/invoice-server</url>
 		<developerConnection>scm:git:git@github.com:raghu-organization/invoice-server.git</developerConnection>
 		<connection>scm:git:git@github.com:raghu-organization/invoice-server.git</connection>
-    <tag>HEAD</tag>
+    <tag>invoice-client-tag-0.20</tag>
   </scm>
 	<build>
 		<pluginManagement>
